# github-user-activity-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  github_activity.py  pyproject.toml
github_api/: __init__.py  common.py  consts.py  exceptions.py  user.py
github_api/models/: __init__.py  user_activity.py
